Fix header alignment

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -125,6 +125,9 @@
 
   background: rgba(255, 255, 255, 0.03);
   border: var(--b-10);
+
+  justify-content: center;
+  align-items: center;
 }
 
 .link {
@@ -204,4 +207,6 @@
 
   color: rgba(255, 255, 255, 0.85);
   cursor: pointer;
+
+  flex: 0 0 38px;
 }
